address resources directly from their source folders to avoid any need of server restarts for development

--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -48,4 +48,4 @@
 <script>
     window.gw2historyData = ${history};
 </script>
-<script src="/js/history.js"></script>
+<script src="/static/js/history.js"></script>
