--- a/server/src/main/resources/templates/frame.vm
+++ b/server/src/main/resources/templates/frame.vm
@@ -10,7 +10,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
         -->
 
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/static/css/styles.css">
     </head>
     <body>#parse("${view}.vm")</body>
 </html>
