added some panels and a simple navigation bar

--- a/server/src/main/resources/static/css/styles.css
+++ b/server/src/main/resources/static/css/styles.css
@@ -45,3 +45,11 @@
     fill: none;
     pointer-events: all;
 }
+
+/*
+    Navigation
+*/
+.navbar {
+    /* FIXME: */
+    background-color: #0f0;
+}
