--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -6,15 +6,11 @@
     <span class="currency-copper">${price.copperCoins}</span>
 #end
 
+<div class="page-header">
+    <h1>TODO: item name + icon</h1>
+</div>
+
 <table class="table table-striped table-bordered table-hover">
-    <tr>
-        <th>Item</th>
-        <td>FIXME: name here</td>
-    </tr>
-    <tr>
-        <th>Item-ID</th>
-        <td>${latestStats.itemId}</td>
-    <tr>
     <tr>
         <th>Highest bidder</th>
         <td>#price(${latestStats.buyStatistics.maxPrice})</td>
@@ -43,6 +39,8 @@
 
     ## TODO: flip profit min<->max, avg<->avg
 </table>
+
+<div id="priceHistory"></div>
 
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script>
