--- a/server/src/main/resources/templates/frame.vm
+++ b/server/src/main/resources/templates/frame.vm
@@ -13,13 +13,13 @@
         <link rel="stylesheet" href="/static/css/styles.css">
     </head>
     <body>
-        <nav class="navbar navbar-fixed-top">
+        <nav class="navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/index.html">gw2trades</a>
             </div>
         </nav>
 
-        <div class="container-fluid">
+        <div id="body-container" class="container-fluid">
             #parse("${view}.vm")
         </div>
     </body>
