display silver coins when there are gold coins

--- a/server/src/main/resources/templates/macros.vm
+++ b/server/src/main/resources/templates/macros.vm
@@ -1,7 +1,7 @@
 #macro(price $coins)
     #set($price = $gw2.price($coins))
     #if($price.goldCoins > 0)<span class="currency-gold">${price.goldCoins}</span>#end
-    #if($price.silverCoins > 0)<span class="currency-silver">${price.silverCoins}</span>#end
+    #if($price.silverCoins > 0 || $price.goldCoins > 0)<span class="currency-silver">${price.silverCoins}</span>#end
     <span class="currency-copper">${price.copperCoins}</span>
 #end
 
