colored buyers/sellers table headers

--- a/server/src/main/resources/static/css/styles.css
+++ b/server/src/main/resources/static/css/styles.css
@@ -101,3 +101,11 @@ a:focus,
 .pagination>li>a:focus {
     color: #C8231F;
 }
+
+.text-sellers {
+    color: #1C5181;
+}
+
+.text-buyers {
+    color: #C8231F;
+}
