--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -12,7 +12,7 @@
     <div class="col-md-6">
         <table class="table table-striped table-bordered table-hover">
             <tr>
-                <th colspan="2">Buyers</th>
+                <th colspan="2" class="text-buyers">Buyers</th>
             </tr>
             <tr>
                 <th>Highest bidder</th>
@@ -35,7 +35,7 @@
     <div class="col-md-6">
         <table class="table table-striped table-bordered table-hover">
             <tr>
-                <th colspan="2">Buyers</th>
+                <th colspan="2" class="text-sellers">Sellers</th>
             </tr>
             <tr>
                 <th>Lowest seller</th>
