display item names and their icons

--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -1,7 +1,7 @@
 <div class="page-header">
     <h1>
-        TODO: item name + icon
-        <a href="http://wiki-de.guildwars2.com/wiki/FIXME"><img src="/static/images/gw2wiki.jpg"></a>
+        <img src="${item.iconUrl}"> ${item.name}
+        <a href="http://wiki-en.guildwars2.com/wiki/${gw2.wikiName($item.name)}"><img src="/static/images/gw2wiki.jpg"></a>
         <a href="https://gw2treasures.com/item/${latestStats.itemId}"><img src="/static/images/gw2treasures.png"></a>
     </h1>
     <h3>
