display item level because equipment usually exists for multiple levels with the same name

--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -1,6 +1,6 @@
 <div class="page-header">
     <h1>
-        <img src="${item.iconUrl}"> ${item.name}
+        <img src="${item.iconUrl}"> ${item.name} (${item.level})
         <a href="http://wiki-en.guildwars2.com/wiki/${gw2.wikiName($item.name)}"><img src="/static/images/gw2wiki.jpg"></a>
         <a href="https://gw2treasures.com/item/${latestStats.itemId}"><img src="/static/images/gw2treasures.png"></a>
     </h1>
