--- a/server/src/main/resources/templates/index.vm
+++ b/server/src/main/resources/templates/index.vm
@@ -6,7 +6,7 @@
 
 <table class="table table-striped table-bordered table-hover">
     <tr>
-        <td>&nbsp;</th>
+        <th>&nbsp;</th>
         <th colspan="2">Buy</th>
         <th colspan="2">Sell</th>
     </tr>
