--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -74,6 +74,7 @@
 </div>
 
 <div id="priceHistory"></div>
+<div id="supplyHistory"></div>
 
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script>
