added icon in front of ever item

--- a/server/src/main/resources/templates/index.vm
+++ b/server/src/main/resources/templates/index.vm
@@ -32,6 +32,7 @@
 #foreach($stats in $listingStatistics)
     <tr>
         <td>
+            <img src="${stats.item.iconUrl}" alt="Icon" title="${stats.item.name}" class="item-icon-mini">
             <a href="/details/${stats.item.itemId}.html">
                 ${stats.item.name} (${stats.item.level})
             </a>
