adjusted tooltip border color

--- a/server/src/main/resources/static/css/styles.css
+++ b/server/src/main/resources/static/css/styles.css
@@ -87,7 +87,7 @@
 }
 .gw2-history-tooltip {
     position: absolute;
-    border: 1px solid #C8231F;
+    border: 1px solid #FE7875;
     background-color: rgba(255, 255, 255, 0.8);
     padding: 4px;
 }
