--- a/server/src/main/resources/templates/frame.vm
+++ b/server/src/main/resources/templates/frame.vm
@@ -31,6 +31,16 @@
 
         <div id="body-container" class="container-fluid">
             #parse("${view}.vm")
+
+            <footer>
+                <div class="panel panel-default">
+                    <ul class="nav nav-pills">
+                        <!-- TODO: implement me -->
+                        <li><a href="/impressum.html">Impressum</a></li>
+                        <li><a href="mailto:slotties@gmail.com">Contact me</a></li>
+                    </ul>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
