--- a/server/src/main/resources/templates/frame.vm
+++ b/server/src/main/resources/templates/frame.vm
@@ -16,16 +16,20 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
-        <!--
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-        -->
 
         <link rel="stylesheet" href="/static/css/styles.css">
     </head>
     <body>
         <nav class="navbar-default navbar-fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">gw2trades</a>
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/index.html">gw2trades</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="https://github.com/slotties/gw2trades/wiki/News">News</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
 
