--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -86,11 +86,21 @@
     <span class="tooltip-bidder-avg">Average buyer:</span>
     <span class="avg-bidder-value"></span>
 </div>
-<div id="priceHistory"></div>
+<div class="btn-group" role="group" id="chart-timeframe-selectors">
+    <button type="button" class="btn btn-default" data-offset="1m">1 Month</button>
+    <button type="button" class="btn btn-default" data-offset="7d">1 Week</button>
+    <button type="button" class="btn btn-default" data-offset="3d">3 Days</button>
+    <button type="button" class="btn btn-default" data-offset="1d">Today</button>
+</div>
+<div id="priceHistory">
+</div>
 <div id="supplyHistory"></div>
 
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script>
     window.gw2historyData = ${history};
+    window.gw2scope = {
+        itemId: ${item.itemId}
+    };
 </script>
 <script src="/static/js/history.js"></script>
