--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -88,7 +88,7 @@
 </div>
 <div class="btn-group" role="group" id="chart-timeframe-selectors">
     <button type="button" class="btn btn-default" data-offset="1m">1 Month</button>
-    <button type="button" class="btn btn-default" data-offset="7d">1 Week</button>
+    <button type="button" class="btn btn-default" data-offset="7d" data-initial="true">1 Week</button>
     <button type="button" class="btn btn-default" data-offset="3d">3 Days</button>
     <button type="button" class="btn btn-default" data-offset="1d">Today</button>
 </div>
