--- a/server/src/main/resources/static/css/styles.css
+++ b/server/src/main/resources/static/css/styles.css
@@ -160,3 +160,18 @@ a:focus,
     width: 32px;
     height: 32px;
 }
+
+.grid .tick {
+    stroke: #ddd;
+    opacity: 0.7;
+}
+.grid path {
+      stroke-width: 0;
+}
+.grid .tick {
+    stroke: #ddd;
+    opacity: 0.7;
+}
+.grid path {
+      stroke-width: 0;
+}
