--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -15,7 +15,7 @@
 
 <div class="page-header">
     <h1>
-        <img alt="Item icon" src="${item.iconUrl}"> ${item.name} <span title="Level requirements">(${item.level})</span>
+        <img alt="Item icon" src="${item.iconUrl}"> ${item.name} #if($item.level > 0)<span title="Level requirements">(${item.level})</span>#end
         <a href="http://wiki-en.guildwars2.com/wiki/${gw2.wikiName($item.name)}"><img alt="gw2wiki" title="Link to the official Guild Wars 2 Wiki" src="/static/images/gw2wiki.jpg"></a>
         <a href="https://gw2treasures.com/item/${latestStats.itemId}"><img alt="gw2treasures" title="Link to gw2treasures.com for further item information" src="/static/images/gw2treasures.png"></a>
     </h1>
