--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -2,9 +2,8 @@
 {
     "@context": "http://schema.org/",
     "@type": "Product",
-    "name": "${item.name}",
-    "image": "${item.iconUrl}",
-    "mpn": "925872",
+    "name": "${latestStats.item.name}",
+    "image": "${latestStats.item.iconUrl}",
     "offers": {
         "@type": "Offer",
         "priceCurrency": "Guild Wars 2 Coins",
@@ -15,7 +14,7 @@
 
 <div class="page-header">
     <h1>
-        <img alt="Item icon" src="${item.iconUrl}"> ${item.name} #if($item.level > 0)<span title="Level requirements">(${item.level})</span>#end
+        <img alt="Item icon" src="${latestStats.item.iconUrl}"> ${latestStats.item.name} #if($item.level > 0)<span title="Level requirements">(${latestStats.item.level})</span>#end
         <a href="http://wiki-en.guildwars2.com/wiki/${gw2.wikiName($item.name)}"><img alt="gw2wiki" title="Link to the official Guild Wars 2 Wiki" src="/static/images/gw2wiki.jpg"></a>
         <a href="https://gw2treasures.com/item/${latestStats.itemId}"><img alt="gw2treasures" title="Link to gw2treasures.com for further item information" src="/static/images/gw2treasures.png"></a>
     </h1>
@@ -98,9 +97,8 @@
 
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script>
-    window.gw2historyData = ${history};
     window.gw2scope = {
-        itemId: ${item.itemId}
+        itemId: ${latestStats.item.itemId}
     };
 </script>
 <script src="/static/js/history.js"></script>
