--- a/server/src/main/resources/templates/index.vm
+++ b/server/src/main/resources/templates/index.vm
@@ -22,7 +22,7 @@
     </form>
 </div>
 
-#parse("/pager.vm")
+#parse("pager.vm")
 
 <table class="table table-striped table-bordered table-hover">
     <tr>
@@ -73,4 +73,4 @@
 #end
 </table>
 
-#parse("/pager.vm")
+#parse("pager.vm")
