--- a/server/src/main/resources/templates/impressum.vm
+++ b/server/src/main/resources/templates/impressum.vm
@@ -4,19 +4,19 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title">Anbieter / Provider</h3>
+        <h3 class="panel-title">Anbieter</h3>
     </div>
     <div class="panel-body">
         Stefan Lotties<br>
         Helmholtzstr. 62<br>
         50825 K&ooml;ln
-        Deutschland / Germany
+        Deutschland
     </div>
 </div>
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title">Kontakt / Contact</h3>
+        <h3 class="panel-title">Kontakt</h3>
     </div>
     <div class="panel-body">
         e-Mail: slotties (at) gmail (punkt) com<br>
@@ -25,7 +25,7 @@
 </div>
 
 <div class="page-header">
-    <h1>Datenschutzerkl&auml;rung / Privacy statement</h1>
+    <h1>Datenschutzerkl&auml;rung</h1>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading">
@@ -36,18 +36,12 @@
         <br>
         Abgesehen davon werden keine Daten erhoben, gespeichert oder ausgewertet.
         <br>
-        Die Log-Dateien werden nur sieben Tage aufbewahrt und danach nach bestem Wissen und Gewissen gel&oouml;scht.
-    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">English</h3>
-    </div>
-    <div class="panel-body">
-        This web server writes access logs containing IP addresses of every user that accesses this web site. These log files are just used for research on problems.
+        Diese Log-Dateien werden nur sieben Tage aufbewahrt und danach nach bestem Wissen und Gewissen gel&oouml;scht.
+        <br><br>
+        Diese Website nutzt Funktionen des  Webanalysedienstes Google Analytics. Anbieter ist die Google Inc. 1600 Amphitheatre Parkway Mountain View, CA 94043, USA. Google Analytics verwendet sog. "Cookies". Das sind Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie erm&ouml;glichen. Die durch den Cookie erzeugten Informationen &uuml;ber Ihre Benutzung dieser Website werden in der Regel an einen Server von Google in den USA &uuml;bertragen und dort gespeichert.
         <br>
-        Beside these logs no more information are logged.
+        Im Falle der Aktivierung der IP-Anonymisierung auf dieser Webseite wird Ihre IP-Adresse von Google jedoch innerhalb von Mitgliedstaaten der Europ&auml;ischen Union oder in anderen Vertragsstaaten des Abkommens &uuml;ber den Europ&auml;ischen Wirtschaftsraum zuvor gek&uuml;rzt. Nur in Ausnahmef&auml;llen wird die volle IP-Adresse an einen Server von Google in den USA &uuml;bertragen und dort gek&uuml;rzt. Im Auftrag des Betreibers dieser Website wird Google diese Informationen benutzen, um Ihre Nutzung der Website auszuwerten, um Reports &uuml;ber die Websiteaktivit&auml;ten zusammenzustellen und um weitere mit der Websitenutzung und der Internetnutzung verbundene Dienstleistungen gegen&uuml;ber dem Websitebetreiber zu erbringen. Die im Rahmen von Google Analytics von Ihrem Browser &uuml;bermittelte IP-Adresse wird nicht mit anderen Daten von Google zusammengef&uuml;hrt.
         <br>
-        The log files are removed after seven days.
+        Sie k&ouml;nnen die Speicherung der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht s&auml;mtliche Funktionen dieser Website vollumf&auml;nglich werden nutzen k&ouml;nnen. Sie k&ouml;nnen dar&uuml;ber hinaus die Erfassung der durch das Cookie erzeugten und auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem sie das unter dem folgenden Link verf&uuml;gbare Browser-Plugin herunterladen und installieren: http://tools.google.com/dlpage/gaoptout?hl=de
     </div>
 </div>
