--- a/server/src/main/resources/templates/impressum.vm
+++ b/server/src/main/resources/templates/impressum.vm
@@ -9,7 +9,7 @@
     <div class="panel-body">
         Stefan Lotties<br>
         Helmholtzstr. 62<br>
-        50825 K&ooml;ln
+        50825 K&ouml;ln
         Deutschland
     </div>
 </div>
