--- a/server/src/main/resources/static/css/styles.css
+++ b/server/src/main/resources/static/css/styles.css
@@ -183,3 +183,28 @@ a:focus,
 .text-profit {
    color: #189D21;
 }
+
+.rarity-junk {
+    color: #AAA;
+}
+.rarity-basic {
+    color: #000;
+}
+.rarity-fine {
+    color: #62A4DA;
+}
+.rarity-masterwork {
+    color: #1a9306;
+}
+.rarity-rare {
+    color: #fcd00b;
+}
+.rarity-exotic {
+    color: #ffa405;
+}
+.rarity-ascended {
+    color: #fb3e8d;
+}
+.rarity-legendary {
+    color: #4C139D;
+}
