--- a/server/src/main/resources/templates/index.vm
+++ b/server/src/main/resources/templates/index.vm
@@ -60,7 +60,7 @@
     <tr>
         <td>
             <img src="${stats.item.iconUrl}" alt="Icon" title="${stats.item.name}" class="item-icon-mini">
-            <a href="/details/${stats.item.itemId}.html">
+            <a href="/details/${stats.item.itemId}.html" class="rarity-${stats.item.rarity.toLowerCase()}">
                 ${stats.item.name} #if($stats.item.level > 0)(${stats.item.level})#end
             </a>
         </td>
